[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menus/Map_Controller/Map_Controller.gd" type="Script" id=1]
[ext_resource path="res://HUD/Player_Status/Player_Status.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Hero/Hero.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/Soul_Counter/Soul_Counter.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD/MiniMap/MiniMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://Maps/Tutorial_Room/Tutorial_Room.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/BG_Music/Anttis/Cubes-Of-H2O.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/BG_Music/Anttis/Does-It-Echo-Here.ogg" type="AudioStream" id=8]
[ext_resource path="res://Menus/Endings/Ending_Scene.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="Map_Controller" type="Node2D"]
script = ExtResource( 1 )
BG_Music = ExtResource( 8 )
Tutorial_Music = ExtResource( 7 )
initial_tutorial = ExtResource( 6 )
ending_screen = ExtResource( 9 )

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
bus = "BG"

[node name="Room_Transition" type="Node" parent="."]

[node name="change_timer" type="Timer" parent="Room_Transition"]
process_mode = 0
wait_time = 0.4
one_shot = true

[node name="Tween" type="Tween" parent="Room_Transition"]

[node name="Blackout" type="Panel" parent="Room_Transition"]
modulate = Color( 1, 1, 1, 0 )
light_mask = -2147483647
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scene_Transtition" type="Node" parent="."]

[node name="Tween" type="Tween" parent="Scene_Transtition"]

[node name="Temp_Screen" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Temp_Screen"]
size = Vector2( 1024, 600 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Normal_Game" type="Node2D" parent="."]

[node name="Screen" type="ViewportContainer" parent="Normal_Game"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="Normal_Game/Screen"]
size = Vector2( 1024, 600 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Room" type="Node2D" parent="Normal_Game/Screen/Viewport"]

[node name="Hero" parent="Normal_Game/Screen/Viewport" instance=ExtResource( 3 )]
available_powers = {
"dash": false
}

[node name="Camera" type="Camera2D" parent="Normal_Game/Screen/Viewport/Hero"]
current = true
limit_left = 0
limit_top = 0

[node name="HUD" type="VBoxContainer" parent="Normal_Game"]
margin_left = 10.0
margin_top = 10.0
margin_right = 100.0
margin_bottom = 129.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Status" parent="Normal_Game/HUD" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 100.0
margin_bottom = 52.0
Character = NodePath("../../../../Map_Controller/Normal_Game/Screen/Viewport/Hero")

[node name="Soul_Counter" parent="Normal_Game/HUD" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 100.0
margin_bottom = 129.0
Character = NodePath("../../../../Map_Controller/Normal_Game/Screen/Viewport/Hero")

[node name="MiniMap" parent="Normal_Game" instance=ExtResource( 5 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_min_size = Vector2( 1024, 600 )
[connection signal="timeout" from="Room_Transition/change_timer" to="." method="_on_change_timer_timeout"]
[connection signal="tween_all_completed" from="Room_Transition/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="tween_all_completed" from="Scene_Transtition/Tween" to="." method="_on_Scene_tween_all_completed"]
[connection signal="dead" from="Normal_Game/Screen/Viewport/Hero" to="." method="_on_Hero_dead"]
